tests/paczka1/fuzzy1/87311357.err
Error in line 1: nvk A703 21,2
Error in line 10: WxnGXOiE99 A118 96,4
Error in line 21: A118 S506 37,9
Error in line 29: A118 S804 42,4
Error in line 37: Qn5Tm A703 32,11
Error in line 35: IHzr A118 1,2
